* Fixed Safari bug that stacked stars vertically. * Reduced height of avg. rating bar, made border lighter. * Fixed IE 6 bug that centered avg. rating bar instead of align left.
git-svn-id: file:///home/jmullan/src/gallery-git/repo/trunk/gallery2@12731 57fcd75e-5312-0410-8df3-f5eb6fbb1595

--- a/modules/rating/rating.css
+++ b/modules/rating/rating.css
@@ -7,6 +7,7 @@
     margin: 10px 0;
 }
 .giRatingUI img {
+    display: inline;
     height: 16px;
     width: 16px;
     margin: 0;   
@@ -44,18 +45,20 @@
 }
 .giRatingAverage {
     background-color: blue;
-    height: 8px;
+    height: 5px;
+    float: left;
 }
 .giRatingAverageContainer {
-    border: 1px solid black;
-    height: 8px;
+    border: 1px solid #999;
+    height: 5px;
     width: 80px;
+    overflow: hidden;
 }
 
 #RatingImagePreload div {
-	position: absolute;
-	left: 0;
-	top: 0;
-	visibility: hidden;
-	z-index: -1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    visibility: hidden;
+    z-index: -1;
 }
